# MPI-Partitioned-Microbenchmarks

./: .gitignore  README.md  configure.ac
src/: Makefile.am  normal_distribution.cpp  normal_distribution.h  util.c  util.h
src/MPIPCL/: mpipcl.c  mpipcl.h
src/comm_patterns/: Makefile.am  halo3d.c  halo3d_thread_multiple.c  sweep3d.c  sweep3d_thread_multiple.c  sweep3d_thread_partitioned.c
src/pt2pt/: Makefile.am  availability.c  early_bird.c  overhead.c  perceived_bandwidth.c
