AC_INIT([mpm], [0.1], [yiltan.github@gmail.com])
# TODO: Remove subdir-objects and organize project properly
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/pt2pt/Makefile
                 src/comm_patterns/Makefile
                ])
AC_OUTPUT
